<resources>
    <string name="placeholder">Place Holder</string>
    <string name="app_name">HumanKind Counter</string>
    <string name="shuffle_cards">Shuffle cards</string>
    <string name="faction">Faction</string>
    <string name="none">No Faction</string>
    <string name="chimera">Chimera</string>
    <string name="abysmal">Abysmal</string>
    <string name="corpo">Corporation</string>
    <string name="acracia">Acracia</string>
    <string name="next_virtue">Next Virtue</string>
    <string name="shuffle">Shuffle Cards!</string>
    <string name="display_faction_text">Factions got:</string>
    <string name="display_numerical_text">Virtues got:</string>
    <string name="error">An unexpected error happened</string>
    <string name="shuffled">Cards shuffled</string>
    <string name="san">Sanctuary</string>
    <string name="structure">Structure Points</string>
    <string name="will">Will Points</string>
    <string name="no_will">You cannot summon that card, insufficient will points</string>
    <string name="no_structure">Your sanctuary has been destroyed!!</string>
    <string name="display_already_1">Factions obtained</string>
    <string name="structure_question">How many points did they hit you with?</string>
    <string name="will_question">How many points did you spend?</string>
    <string name="add_structure_question">How many point to add?</string>
    <string name="add_will_question">How many will to add?</string>
    <string name="passed">Points that passed</string>
    <string name="will_spent">Will Spent</string>
    <string name="add_structure">Structure to add</string>
    <string name="add_will">Will to add</string>
    <string name="hit_it">HIT IT</string>
    <string name="spend">SPEND</string>
    <string name="add_it">ADD IT</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="language">Language</string>
    <string name="no_faction">No Faction</string>
    <string name="information">Information</string>
    <string name="about">About</string>
    <string name="visual_options">Visual Options</string>
    <string name="num_ed">Numerical Edition Cards</string>
    <string name="fac_ed">Faction Edition Cards</string>
    <string name="dis_trans">Transparent Display Boxes</string>
    <string name="select_sanctuary">Select sanctuary</string>
    <string name="set_up_stats">Set up stats</string>
    <string name="looking">Looking for…</string>
    <string name="select_faction">Select your Faction</string>
    <string name="will_points">Will Points</string>
    <string name="will_placeholder">4</string>
    <string name="structure_placeholder">12</string>
    <string name="structure_points">Structure Points</string>
    <string name="ok">OK</string>
    <string name="edition">Edition</string>
    <string name="id">#</string>
    <string name="faction_box_1">Faction Box 1</string>
    <string name="faction_box_2">Faction Box 2</string>
    <string name="faction_box_3">Faction Box 3</string>
    <string name="faction_box_4">Faction Box 4</string>
    <string name="faction_box_5">Faction Box 5</string>
    <string name="numerical_box_1">Numerical Box 1</string>
    <string name="numerical_box_2">Numerical Box 2</string>
    <string name="numerical_box_3">Numerical Box 3</string>
    <string name="numerical_box_4">Numerical Box 4</string>
    <string name="numerical_box_5">Numerical Box 5</string>
    <string name="ev">Evolución</string>
    <string name="dv">Desviantes</string>
    <string name="su">Suburbia</string>
    <string name="ra">Radix</string>
    <string name="sanctuary_error">Enter edition to look for your sanctuary</string>
    <string name="sanctuary_no_picked_up">Select the id or write the name of your Sanctuary</string>
    <string name="san_to_show">Favorite Sanctuaries to show</string>
    <string name="no_implemented">Not implemented. Next version</string>
    <string name="about_info">
        "About this application:\n\n"
        "This app was developed without profit to contribute the TCG HumanKind.\n"
        "The code was written by Juan Saez Hidalgo and the images and visual design was done by "
        "Sebastian Saez Hidalgo.\n"
        "We want to acknowledge direct help on the project. Some advices were made by Alonso "
        "Reyes on Android Studio programming. Also, indirect help, like the metallic texture on "
        "display boxes was designed by kjpargeter / Freepik\n"
        "We want to also thank for previous feedback, and future ones as well, for the "
        "HumanKind OG community.\n"
        "The source code is available on https://github.com/StarBrand/HumanKindCounter and "
        "it is protected by MIT licence\n\n"
        "Copyright © 2020 Juan Saez Hidalgo\n"
        "Permission is hereby granted, free of charge, to any person obtaining a copy "
        "of this software and associated documentation files (the \"Software\"), to deal "
        "in the Software without restriction, including without limitation the rights "
        "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell "
        "copies of the Software, and to permit persons to whom the Software is "
        "furnished to do so, subject to the following conditions:\n\n"
        "The above copyright notice and this permission notice shall be included in all "
        "copies or substantial portions of the Software.\n"
        "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR "
        "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, "
        "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE "
        "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER "
        "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, "
        "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE "
        "SOFTWARE."
    </string>
</resources>
