<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_view">

    <PreferenceCategory
        android:title="@string/general_settings">

        <ListPreference
            android:key="language"
            android:title="@string/language"
            android:entries="@array/language"
            android:entryValues="@array/language_values"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/visual_options">

        <ListPreference
            android:key="num_ed"
            android:title="@string/num_ed"
            android:entries="@array/num_ed"
            android:entryValues="@array/num_ed_values"/>

        <ListPreference
            android:key="fac_ed"
            android:title="@string/fac_ed"
            android:entries="@array/fac_ed"
            android:entryValues="@array/fac_ed_values"/>

        <CheckBoxPreference
            android:key="transparency"
            android:title="@string/dis_trans"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/information">

        <Preference
            android:key="about"
            android:title="@string/about">
            <intent android:action=""/>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
