<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/look_for"
        android:title="@string/looking"/>
    <item
        android:id="@+id/set_up"
        android:title="@string/set_up_stats"/>
    <item
        android:id="@+id/cache_1"
        android:title="@string/placeholder"
        android:visible="false"/>
    <item
        android:id="@+id/cache_2"
        android:title="@string/placeholder"
        android:visible="false"/>
    <item
        android:id="@+id/cache_3"
        android:title="@string/placeholder"
        android:visible="false"/>
    <item
        android:id="@+id/cache_4"
        android:title="@string/placeholder"
        android:visible="false"/>
    <item
        android:id="@+id/cache_5"
        android:title="@string/placeholder"
        android:visible="false"/>
</menu>
