<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/alert_dark_frame">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/select_faction"/>

    <Spinner
        android:id="@+id/select_faction"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:spinnerMode="dialog"
        android:prompt="@string/faction"
        android:textSize="25sp"
        android:background="@android:color/white"
        android:textColor="@android:color/black"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:text="@string/will_points"/>

            <EditText
                android:id="@+id/set_will"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:background="@color/blue"
                android:importantForAutofill="no"
                android:hint="@string/will_placeholder"
                android:gravity="center_horizontal"
                android:inputType="number"/>

        </LinearLayout>
        
        <Space
            android:layout_width="25dp"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.6">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:text="@string/structure_points"/>

            <EditText
                android:id="@+id/set_structure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:background="@color/red"
                android:importantForAutofill="no"
                android:hint="@string/structure_placeholder"
                android:gravity="center_horizontal"
                android:inputType="number"/>

        </LinearLayout>
        
    </LinearLayout>

    <Button
        android:id="@+id/ok_button"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/ok"/>

</LinearLayout>
