<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:drawable/alert_dark_frame">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/hits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/passed"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/hit_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hit_it"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
